--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <title>Vux</title>
+    <title>噼啪支付</title>
   </head>
   <body>
     <div id="app"></div>
